--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "operating-system-posix"]
 	path = operating-system-posix
 	url = ../operating-system-posix
+[submodule "operating-system-darwin"]
+	path = operating-system-darwin
+	url = ../operating-system-darwin
