--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ endif()
 add_subdirectory(operating_system-posix/write_text_pango)
 add_subdirectory(operating_system-posix/audio_alsa)
 #add_subdirectory(operating_system-freebsd/audio_mixer_alsa)
-#add_subdirectory(operating_system-freebsd/music_midi_alsa)
+add_subdirectory(operating_system-posix/music_midi_alsa)
 
 
 
