--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,11 @@ endif()
 if(KDE_DESKTOP)
     add_subdirectory(operating_system-posix/windowing_x11)
     add_subdirectory(operating_system-posix/windowing_xcb)
-    add_subdirectory(operating_system-posix/node_kde)
+    if(HAS_KDE6)
+        add_subdirectory(operating_system-posix/node_kde6)
+    elseif(HAS_KDE5)
+        add_subdirectory(operating_system-posix/node_kde5)
+    endif()
     add_subdirectory(operating_system-freebsd/desktop_environment_kde)
 endif()
 
