<3ThomasBS_ILoveYOU!! <3ThomasBS_ILoveYOU!! <3ThomasBS_ILoveYOU!! 🌌🌍 Fixing git source tree for FreeBSD 14.0! <3ThomasBS_ILoveYOU!! You are My Only God!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

lowluds active support and contribution to ca2 project!!

shegotmad (from London at Twitch) learning C++ and helping ca2 contribution!!

morrison_nm (from Twitch) learning C++ contribution!!

bl4ck_goku (Diego Brando) chatting contribution!!

j_blow(Naysayer88) and friends streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contribution!!

Myrkee (Valheim) stre

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ add_subdirectory(operating_system-posix/aura_posix)
 add_subdirectory(operating_system-darwin/aura_darwin)
 add_subdirectory(operating_system-freebsd/aura_freebsd)
 
-add_subdirectory(operating_system-posix/nano_dynamic_library_dl)
-add_subdirectory(operating_system-posix/nano_dynamic_library_dl_null)
+#add_subdirectory(operating_system-posix/nano_dynamic_library_dl)
+#add_subdirectory(operating_system-posix/nano_dynamic_library_dl_null)
 
 add_subdirectory(operating_system-posix/nano_compress_command_line)
 add_subdirectory(operating_system-posix/nano_http_command_line)
@@ -23,9 +23,9 @@ add_subdirectory(operating_system-posix/nano_http_libcurl)
 
 add_subdirectory(operating_system-posix/windowing_posix)
 add_subdirectory(operating_system-posix/nano_graphics_cairo)
-add_subdirectory(operating_system-posix/windowing_system_x11)
+add_subdirectory(operating_system-posix/acme_windowing_gtk4)
 add_subdirectory(operating_system-posix/node_gdk)
-add_subdirectory(operating_system-posix/nano_user_x11)
+#add_subdirectory(operating_system-posix/nano_user_x11)
 
 if(LXDE_DESKTOP)
     add_subdirectory(operating_system-posix/windowing_x11)
@@ -42,8 +42,8 @@ endif()
 if(GNOME_DESKTOP)
     add_subdirectory(operating_system-posix/windowing_x11)
     if(${HAS_GTK4})
-        add_subdirectory(operating_system-posix/windowing_system_gtk4)
-        add_subdirectory(operating_system-posix/nano_user_gtk4)
+        #add_subdirectory(operating_system-posix/windowing_system_gtk4)
+        #add_subdirectory(operating_system-posix/nano_user_gtk4)
         add_subdirectory(operating_system-posix/innate_ui_gtk4)
         add_subdirectory(operating_system-posix/windowing_gtk4)
         add_subdirectory(operating_system-posix/node_gtk4)
