--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ if(XFCE_DESKTOP)
     add_subdirectory(operating_system-freebsd/desktop_environment_xfce)
 endif()
 if(GNOME_DESKTOP)
-    add_subdirectory(operating_system-posix/windowing_x11)
+    #add_subdirectory(operating_system-posix/windowing_x11)
+    #add_subdirectory(operating_system-posix/nano_graphics_cairo)
     if(${HAS_GTK4})
         #add_subdirectory(operating_system-posix/windowing_system_gtk4)
         #add_subdirectory(operating_system-posix/nano_user_gtk4)
@@ -51,7 +52,8 @@ if(GNOME_DESKTOP)
         add_subdirectory(operating_system-posix/node_gtk3)
     endif()
     add_subdirectory(operating_system-posix/node_gtk_based)
-    add_subdirectory(operating_system-freebsd/desktop_environment_gtk_based)
+    add_subdirectory(operating_system-freebsd/operating_ambient_gtk_based)
+    #add_subdirectory(operating_system-freebsd/desktop_environment_gtk_based)
 endif()
 if(KDE_DESKTOP)
     add_subdirectory(operating_system-posix/windowing_x11)
@@ -67,7 +69,7 @@ endif()
 
 add_subdirectory(operating_system-posix/write_text_pango)
 add_subdirectory(operating_system-posix/audio_alsa)
-add_subdirectory(operating_system-posix/input_xinput)
+#add_subdirectory(operating_system-posix/input_xinput)
 #add_subdirectory(operating_system-freebsd/audio_mixer_alsa)
 add_subdirectory(operating_system-posix/music_midi_alsa)
 
