--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_subdirectory(operating_system-posix/nano_http_libcurl)
 add_subdirectory(operating_system-posix/windowing_posix)
 add_subdirectory(operating_system-posix/nano_graphics_cairo)
 add_subdirectory(operating_system-posix/acme_windowing_gtk4)
-add_subdirectory(operating_system-posix/node_gdk)
+#add_subdirectory(operating_system-posix/node_gdk)
 #add_subdirectory(operating_system-posix/nano_user_x11)
 
 if(LXDE_DESKTOP)
@@ -42,6 +42,7 @@ endif()
 if(GNOME_DESKTOP)
     #add_subdirectory(operating_system-posix/windowing_x11)
     #add_subdirectory(operating_system-posix/nano_graphics_cairo)
+    add_subdirectory(operating_system-posix/common_gtk)
     if(${HAS_GTK4})
         #add_subdirectory(operating_system-posix/windowing_system_gtk4)
         #add_subdirectory(operating_system-posix/nano_user_gtk4)
