--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,16 +56,20 @@ if(${GTK_BASED_DESKTOP})
     #add_subdirectory(operating_system-posix/node_gtk_based)
     #add_subdirectory(operating_system-freebsd/operating_ambient_gtk_based)
     #add_subdirectory(operating_system-freebsd/desktop_environment_gtk_based)
-endif()
-if(KDE_DESKTOP)
-    add_subdirectory(operating_system-posix/windowing_x11)
-    add_subdirectory(operating_system-posix/windowing_xcb)
-    if(HAS_KDE6)
+elseif(${KDE_DESKTOP})
+    #add_subdirectory(operating_system-posix/windowing_x11)
+    #add_subdirectory(operating_system-posix/windowing_xcb)
+    if(${HAS_KDE6})
         add_subdirectory(operating_system-posix/node_kde6)
-    elseif(HAS_KDE5)
+    elseif(${HAS_KDE5})
+        add_subdirectory(operating_system-posix/acme_windowing_kde5)
+        add_subdirectory(operating_system-posix/nano_graphics_cairo)
+        add_subdirectory(operating_system-posix/innate_ui_kde5)
+        add_subdirectory(operating_system-posix/windowing_kde5)
         add_subdirectory(operating_system-posix/node_kde5)
+        add_subdirectory(operating_system-freebsd/operating_ambient_kde5)
     endif()
-    add_subdirectory(operating_system-freebsd/desktop_environment_kde)
+    #add_subdirectory(operating_system-freebsd/desktop_environment_kde)
 endif()
 
 
