--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,10 +62,17 @@ elseif(${KDE_DESKTOP})
     if(${HAS_KDE6})
         add_subdirectory(operating_system-posix/node_kde6)
     elseif(${HAS_KDE5})
+        add_subdirectory(operating_system-posix/acme_windowing_q)
+        add_subdirectory(operating_system-posix/acme_windowing_q5)
         add_subdirectory(operating_system-posix/acme_windowing_kde5)
         add_subdirectory(operating_system-posix/nano_graphics_cairo)
+        add_subdirectory(operating_system-posix/innate_ui_q)
+        add_subdirectory(operating_system-posix/innate_ui_q5)
         add_subdirectory(operating_system-posix/innate_ui_kde5)
+        add_subdirectory(operating_system-posix/windowing_q)
+        add_subdirectory(operating_system-posix/windowing_q5)
         add_subdirectory(operating_system-posix/windowing_kde5)
+        add_subdirectory(operating_system-posix/node_q)
         add_subdirectory(operating_system-posix/node_kde5)
         add_subdirectory(operating_system-freebsd/operating_ambient_kde5)
     endif()
