<3ThomasBS_ILoveYOU!! 🌌🌍 [ FreeBSD with Xfce ] [ 14.2 ] [ C++ ] ca2 Store <3ThomasBS_ILoveYOU!! MyOnlyGod!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contribution!!

Myrkee (Valheim) streaming contribution!!

xmetrix and EinfachUwe42 streaming contribution!!

JessicaMak and marcobrunodev streaming contribution!!

alfredotigolo, mandrakenk and Okbatgames chatting contribution!!

jitspoe, Endesga and Fearitself streaming contribution!!

jmcmorris (Jason Morris, SiegeGames) streaming contribution!!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,12 +33,12 @@ if(LXDE_DESKTOP)
     add_subdirectory(operating_system-posix/node_gnome)
     add_subdirectory(operating_system-freebsd/desktop_environment_gnome)
 endif()
-if(XFCE_DESKTOP)
-    add_subdirectory(operating_system-posix/windowing_x11)
-    add_subdirectory(operating_system-posix/node_gtk)
-    add_subdirectory(operating_system-posix/node_xfce)
-    add_subdirectory(operating_system-freebsd/desktop_environment_xfce)
-endif()
+#if(XFCE_DESKTOP)
+#    #add_subdirectory(operating_system-posix/windowing_x11)
+#    #add_subdirectory(operating_system-posix/node_gtk)
+#    #add_subdirectory(operating_system-posix/node_xfce)
+#    #add_subdirectory(operating_system-freebsd/operating_ambient_xfce)
+#endif()
 if(${GTK_BASED_DESKTOP})
     #add_subdirectory(operating_system-posix/windowing_x11)
     #add_subdirectory(operating_system-posix/nano_graphics_cairo)
@@ -51,7 +51,12 @@ if(${GTK_BASED_DESKTOP})
         add_subdirectory(operating_system-posix/node_gtk4)
         add_subdirectory(operating_system-freebsd/operating_ambient_gtk4)
     elseif(${HAS_GTK3})
+        add_subdirectory(operating_system-posix/acme_windowing_gtk3)
+        add_subdirectory(operating_system-posix/nano_graphics_cairo)
+        add_subdirectory(operating_system-posix/innate_ui_gtk3)
+        add_subdirectory(operating_system-posix/windowing_gtk3)
         add_subdirectory(operating_system-posix/node_gtk3)
+        add_subdirectory(operating_system-freebsd/operating_ambient_gtk3)
     endif()
     #add_subdirectory(operating_system-posix/node_gtk_based)
     #add_subdirectory(operating_system-freebsd/operating_ambient_gtk_based)
