🌌🌍 <3ThomasBSILoveYou!! 🌌🌍 [ FreeBSD 15.0 ARM64 with GNOME ] [ day 314 ] [ C++ ] Building ca2 at FreeBSD 15.0 ARM64 with GNOME <3ThomasBSJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi 2021-11-19 01:01 (AM) Second Super Tuna Sandwich in Baguete with Lots Tomato, second Coke and cake no gluten with tea....

Mummi orange-rice-flour cake on 20-Dec!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

camandcode (Cameron White) streaming & friendship contribution!!

boflux (Spoofh, Benjamin Kuhl, from Germany) chatting contribution!!

lowluds (from Canada) chatting and general support contribution!!

smokesess (from Canada) chatting and general support contribution!!

shegotmad (at London) chatting, learning C++ and talking about ca2 contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

tomrandall streaming Ludum contribution!!

alfredotigolo and Okbatgames chatting contribution!!

xmetrix streaming contribution!!

JessicaMak and marcobrunodev streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch) C++/ca2 interest contribution!!

Myrkee (Valheim) streaming contribution!!

EinfachUwe42 streaming contribution!!

JPCdk streaming contribution!!

Draxill69 streaming contribution!!

sodapoppin and friends contribution!!

cmgriffing streaming contribution!!

GriffingAndChill streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

sodapoppin streaming contribut

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,14 +97,17 @@ elseif(${KDE_DESKTOP})
 endif()
 
 
+if(${WITH_AUDIO})
 add_subdirectory(operating_system-posix/write_text_pango)
 add_subdirectory(operating_system-posix/audio_alsa)
 #add_subdirectory(operating_system-posix/input_xinput)
 #add_subdirectory(operating_system-freebsd/audio_mixer_alsa)
+endif()
+
+
 if(${WITH_MIDI})
 add_subdirectory(operating_system-posix/music_midi_alsa)
 endif()
-
 
 
 
